kube/00_create_namespace.yml
kind: Namespace
apiVersion: v1
metadata:
  name: edu-ma2-web
  labels:
    name: edu-ma2-web
