kube/02_database.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-svc
  namespace: edu-ma2-web
  labels:
    app: mongo
spec:
  clusterIP: None #Ignore for now
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-read-svc
  namespace: edu-ma2-web
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: mongo
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: edu-ma2-web
spec:
  serviceName: "mongodb-svc"
  replicas: 3
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongodb
          image: mongo:latest
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-pvc
              mountPath: /dats/db
  volumeClaimTemplates:
    - metadata:
        name: mongo-pvc
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi # adjust this as per your need
